--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
+
+    <div class="game-container">
+        <div class="sky">
+            <div class="bird"></div>
+        </div>
+        <div class="ground"></div>
+    </div>
     
 </body>
 </html>
