--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
+    <title>Flappy Bird Game</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" charset="utf-8"></script>
 </head>
@@ -16,9 +16,11 @@
         <div class="sky">
             <div class="bird"></div>
         </div>
-        <div class="ground"></div>
+    </div>
+    <div class="ground-container">
+        <div class="ground-moving"></div>
     </div>
     <div class="border-right"></div>
     
-</body>
+    </body>
 </html>
